@@ -3,6 +3,7 @@
  * more efficient allocation of small bloom filters (CASSANDRA-3618)
  * CLibrary.createHardLinkWithExec() to check for errors (CASSANDRA-3101)
  * fsync the directory after new sstable or commitlog segment are created (CASSANDRA-3250)
+ * Avoid creating empty and non cleaned writer during compaction (CASSANDRA-3616)
 Merged from 0.8:
  * prevent new nodes from thinking down nodes are up forever (CASSANDRA-3626)
 
